@@ -1,5 +1,5 @@
-DO_ELECTRON = true
-DO_MUON = false
+DO_ELECTRON = false
+DO_MUON = true
 DO_BATCH = false
 FlagBTagging = false
 CutBTagging = 5.72
