@@ -1,3 +1,8 @@
+2010-12-00 Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>
+	
+	* InterfaceD3PD.cxx, Particles.h: pT order for objects and bugfix
+	* tag KLFitter-00-03-33
+
 2010-11-30 Johannes Erdmann <johannes.erdmann@cern.ch>
 	
 	* Minor change for minuit status codes
